# temper

./: .coverage-allowlist  .git-blame-ignore-revs  .gitignore  .importlinter  .loc-allowlist.txt  .opencode.json  .pre-commit-config.yaml  .typecheck-allowlist  ACTUAL_DRC_STATUS.md  AGENTS.md  AGENT_INSTRUCTIONS.md  AGENT_WORKFLOW.md  API_FIX_SUMMARY.md  AUTOMATED_PCB_DESIGN_INSTRUCTIONS.md  BENDERS_LOOP_STATUS.md  BENDERS_STATUS.md  BENDERS_VALIDATION_AND_ZONE_SYNC_REPORT.md  BENDERS_VALIDATION_REPORT.md  BOM.md  BOOTSTRAP_BURST_MODE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPONENT_COMPATIBILITY_VERIFICATION.md  CONSTRAINT_INTEGRATION_COMPLETE.md  CONTRIBUTING.md  CRITICAL_LOOP_DESIGN.md  CT_SENSING_DESIGN.md  DRC_12_30.rpt  DRC_drc_aware.rpt  DRC_high_precision.rpt  DRC_pad_blocked.rpt  DRC_temper_drc_verified.rpt  DRC_ultra_precision.rpt  ECO_MEMORY_BROWSER.md  END_TO_END_STATUS.md  EXACTGEOMETRYROUTER_FIXES.md  EXACTGEOMETRYROUTER_PHASE1_PLAN.md  EXACTGEOMETRYROUTER_RESULTS.md  FEEDBACK_LOOP_RESULTS.md  FINAL_STATUS.md  (+253 more)
.beads/: config.yaml  deletions.jsonl  (+1 more)
firmware/components/hal/: CMakeLists.txt
firmware/components/hal/esp32/: hal_adc_esp32.c  hal_gpio_esp32.c  hal_init.c  hal_pwm_esp32.c  hal_spi_esp32.c  hal_timer_esp32.c
firmware/components/hal/include/: hal.h  hal_adc.h  hal_encoder.h  hal_gpio.h  hal_led.h  hal_pwm.h  hal_spi.h  hal_timer.h  hal_types.h  temper_pins.h
firmware/components/hal/mock/: hal_encoder_mock.c  hal_init_mock.c  hal_led_mock.c  mock_adc.c  mock_gpio.c  mock_pwm.c  mock_spi.c  mock_timer.c
firmware/components/webui/: CMakeLists.txt  server.c
firmware/components/webui/include/: webui_server.h
firmware/components/webui/static/: index.html  script.js  style.css
firmware/test/: CMakeLists.txt  gen_transition_table.py  pan_detect_logic.c  state_machine_stubs.c  test_adc_guard.c  test_cascade_pid.c  test_coil_guard.c  test_common.h  test_fan_guard.c  test_fault_list_generated.c  test_integration.c  test_integration_cascade_pid.c  test_low_temp_control.c  test_main.c  test_main_adc_guard.c  test_main_cascade_pid.c  test_main_coil_guard.c  test_main_fan_guard.c  test_main_integration.c  test_main_integration_cascade_pid.c  test_main_low_temp.c  test_main_ntc_guard.c  test_main_pan_detection.c  test_main_pid.c  test_main_pll.c  test_main_probe_detection.c  test_main_profiles.c  test_main_pwm_guard.c  test_main_safety.c  test_main_state_machine.c  test_main_thermal_mass.c  test_main_ui.c  test_ntc_guard.c  test_pan_detection.c  test_pid_control.c  test_pll_control.c  test_probe_detection.c  test_profiles.c  test_pwm_guard.c  test_safety.c  (+5 more)
firmware/test/traces/: manifest.json  trace_fault_adc_stuck.csv  trace_fault_cooldown_overheat.csv  trace_fault_fan_failure.csv  trace_fault_igbt_short.csv  trace_fault_over_current.csv  trace_fault_over_temp.csv  trace_fault_probe_open.csv  trace_fault_probe_short.csv  trace_fault_relay_welded.csv  trace_fault_thermal_runaway.csv
firmware/test/unity/: unity.c  unity.h
temper-placer/: README.md  memory_profile_results.json  pyproject.toml
temper-placer/configs/: robustness_study.yaml  temper_constraints.yaml
temper-placer/configs/temper/: validation.yaml
temper-placer/docs/: USAGE.md
temper-placer/docs/research/: INDUCTANCE_MODELS.md
temper-placer/research/: debug_libresolar.py
temper-placer/scripts/: analyze_centrality.py  characterize_pathological_seeds.py  generate_unrouted_benchmarks.py  validate_spectral_init.py  verify_spectral_wirelength.py
temper-placer/src/temper_placer/: __init__.py  cli.py
temper-placer/src/temper_placer/ablation/: __init__.py  analysis.py  config.py  experiments.py  metrics.py  registry.py  report.py  runner.py
temper-placer/src/temper_placer/analysis/: drc_correlation.py
temper-placer/src/temper_placer/core/: board.py  community.py  netlist.py  state.py
temper-placer/tests/: conftest.py  test_e2e.py  test_edge_cases.py
temper-placer/tests/ablation/: test_config.py  test_metrics.py  test_registry.py
temper-placer/tests/analysis/: test_drc_correlation.py
temper-placer/tests/cli/: test_ablate_command.py  test_optimize_command.py
temper-placer/tests/comparison/: __init__.py  test_ground_truth_comparison.py  test_quality_metrics.py
temper-placer/tests/core/: test_community.py  test_state.py
temper-placer/tests/fixtures/: README.md  constraints_large.yaml  constraints_medium.yaml  medium_board.kicad_pcb
temper-placer/tests/geometry/: __init__.py  test_geometry.py
temper-placer/tests/heuristics/: __init__.py  test_base.py  test_conflict.py  test_force_directed.py  test_graph_heuristics.py  test_pipeline.py  test_spectral.py
temper-placer/tests/integration/: test_roundtrip.py
temper-placer/tests/io/: test_footprint_parser.py  test_integration.py  test_kicad_writer.py  test_placement_exporter.py  test_rotation_handling.py
temper-placer/tests/losses/: test_coil.py  test_crystal.py  test_decoupling.py  test_edge_crossing.py  test_grid.py  test_grouping.py  test_losses.py  test_net_class.py  test_power_path.py  test_thermal_advanced.py  test_via_density.py
temper-placer/tests/optimizer/: test_centrality.py  test_checkpoint.py  test_initialization.py  test_robustness.py  test_spectral_extended.py  test_train.py  test_train_initialization.py  test_validation_callback.py
temper-placer/tests/requirements/: __init__.py
temper-placer/tests/robustness/: test_malformed_input.py
temper-placer/tests/scale/: test_memory_profiler.py  test_netlist_generator.py
temper-placer/tests/sensitivity/: __init__.py  test_seed_sensitivity.py
temper-placer/tests/validation/: test_drc_runner.py  test_placement_comparison.py  test_spice_templates.py  test_validation.py  test_zero_drc_errors.py
temper-placer/tests/verification/: test_constraint_conflicts.py  test_geometry_ground_truth.py  test_gradient_correctness.py  test_impossible_constraints.py  test_numerical_stability.py  test_optimizer_convergence.py  test_placement_correctness.py  test_placement_validity.py
temper-placer/tests/visualization/: test_coordinate_transforms.py  test_live.py  test_server.py
(+1971 files in other folders)
