[project]
name = "temper-workspace"
version = "0.1.0"
description = "Temper induction cooker development workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
temper-placer = { workspace = true }
temper-workflow = { workspace = true }
temper-tools = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/temper-placer/tests", "packages/temper-workflow/tests", "packages/temper-tools/tests"]
pythonpath = [
    "packages/temper-placer/src",
    "packages/temper-workflow/src", 
    "packages/temper-tools/src"
]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/*/src", "packages/*/tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
