[project]
name = "temper-workspace"
version = "0.1.0"
description = "Temper induction cooker development workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest-bdd>=8.1.0",
    "hypothesis>=6.148.7",
    "vulture>=2.16,<3.0",
    "import-linter>=2.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
temper-placer = { workspace = true }
temper-workflow = { workspace = true }
temper-tools = { workspace = true }
temper-drc = { workspace = true }
temper-autoprof = { workspace = true }
temper-testing = { workspace = true }
temper-validation = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "packages/temper-placer/tests",
    "packages/temper-workflow/tests",
    "packages/temper-tools/tests",
    "packages/temper-drc/tests",
    "packages/temper-autoprof/tests",
    "packages/temper-testing/tests",
    "packages/temper-validation/tests"
]
pythonpath = [
    "packages/temper-placer/src",
    "packages/temper-workflow/src",
    "packages/temper-tools/src",
    "packages/temper-drc/src",
    "packages/temper-autoprof/src",
    "packages/temper-testing/src",
    "packages/temper-validation/src"
]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring full pipeline",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/*/src", "packages/*/tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = [
    "temper_placer.core",
    "temper_placer.router_v6.grid_prep_stage",
    "temper_placer.router_v6.net_prep_stage",
    "temper_placer.router_v6.route_stage",
    "temper_placer.router_v6.result_aggregate_stage",
    "temper_placer.router_v6.stage4_orchestrator",
]

[tool.coverage.report]
show_missing = true
fail_under = 0  # Per-module gates enforced in CI

[tool.coverage.coverage_gates]
grid_prep_stage = 90
net_prep_stage = 90
route_stage = 90
result_aggregate_stage = 90
stage4_orchestrator = 90
