[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temper-placer"
version = "0.1.0"
description = "JAX-based PCB placement optimizer for the Temper induction cooker"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Temper Project", email = "temper@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["pcb", "placement", "optimization", "jax", "kicad", "eda"]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "kiutils>=1.4.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "plotly>=5.18.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "jax[cuda12_pip]>=0.4.20",
]

[project.scripts]
temper-placer = "temper_placer.cli:main"

[project.urls]
Homepage = "https://github.com/temper-project/temper-placer"
Documentation = "https://github.com/temper-project/temper-placer#readme"
Repository = "https://github.com/temper-project/temper-placer"

[tool.hatch.build.targets.wheel]
packages = ["src/temper_placer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["temper_placer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
